--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,17 @@
 }
 
 .size{
-  font-size: 40px;
+  font-size: 2.3em;
+  padding-bottom: 1.5rem;
 }
 .normal-size{
-  font-size: 20px;
+  font-size: 1.5em;
+  padding-bottom: 2rem;
+}
+
+.beg{
+  font-size: 1.5em;
+  padding-bottom: 2rem;
 }
 .font{
   color: #EDF5E1;
